# parapet

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build.bat  parapet.yaml
parapet/: Cargo.toml  eval_harness_baseline.json  eval_harness_no_squash_verdict.json  eval_harness_signals.json  run_config_tests.sh  run_constraint_tests.sh
parapet-data/: README.md  baseline_v1.yaml  generate_spec.py  mirror_spec.example.yaml  mirror_spec_v3.yaml  mirror_spec_v3_19k.yaml  mirror_spec_v4_19k.yaml  mirror_spec_v5_10k.yaml  mirror_spec_v5_5k.yaml  mirror_v3.compact.yaml  mirror_v4.compact.yaml  pyproject.toml
parapet-data/adjudication/: .gitignore  README.md
parapet-data/archive/: mirror_v1.yaml
parapet-data/contracts/: v3_19k.golden_contract.json  v3_19k_clean.golden_contract.json
parapet-data/parapet_data/: __init__.py  __main__.py  classifiers.py  compositor.py  curated_artifact.py  extractors.py  filters.py  golden_contract.py  guardrails.py  ledger.py  models.py  reason_preclassify.py  sampler.py  scope_audit.py  scope_rollup.py  specialists.py  staged_artifact.py  staging.py  verified.py
parapet-data/parapet_data/effects/: __init__.py  effect_taxonomy.py
parapet-data/parapet_data/p3/: __init__.py
parapet-data/scripts/: audit_curated.py  build_ledger_v4.py  check_golden_contract.py  diagnose_drift.py  dq.py  dq_check.py  dq_simple.py  export_attack_candidates.py  export_v5_5k_gap_candidates.ps1  extract_golden_contract.py  generate_ledger_v5r1.py  inventory_data_cleanup.py  preshard.py  promote_swarm_review.py  run_audit.bat  scorecard.py  step1_stats.py  swarm_jsonl_tools.py  wrapper.py
parapet-data/specs/: mirror_spec_v2.yaml  mirror_spec_v4_19k.yaml  mirror_spec_v6_25k.yaml  mirror_spec_v7_35k.yaml  mirror_v3.compact.yaml  mirror_v5.compact.yaml  mirror_v6.compact.yaml  mirror_v7.compact.yaml  mirror_v8.compact.yaml
parapet-data/tests/: test_classifiers.py  test_compositor.py  test_curated_artifact.py  test_extractors.py  test_filters.py  test_generate_spec.py  test_golden_contract.py  test_guardrails.py  test_ledger.py  test_main.py  test_models.py  test_reason_preclassify.py  test_sampler.py  test_schema_resolution.py  test_specialists.py  test_staged_artifact.py  test_staging.py  test_verified.py
parapet-data/tests/effects/: test_effect_taxonomy.py
parapet-data/tests/p3/: test_p3carriers_action_allowlist.py  test_p3carriers_checkpoint.py  test_p3carriers_cli.py  test_p3carriers_normalize.py  test_p3detectors_accumulator.py  test_p3detectors_accumulator_guard.py  test_p3detectors_cli.py  test_p3detectors_deval_embed.py  test_p3detectors_deval_embed_contrastive.py  test_p3detectors_deval_l1.py  test_p3detectors_ensemble.py  test_p3detectors_event_extract.py  test_p3detectors_interface.py  test_p3detectors_mlx_embed_backend.py  test_p3detectors_mlx_judge.py  test_p3detectors_tau_sweep.py  test_p3generation_directive_floor.py  test_p3generation_schema.py  test_p3generation_validate.py
parapet-py/: pyproject.toml
parapet-py/parapet/: __init__.py  header.py  sidecar.py  transport.py  trust.py
parapet-py/tests/: __init__.py  test_e2e.py  test_header.py  test_init.py  test_sidecar.py  test_transport.py  test_trust.py
parapet-runner/: Makefile  README.md  pyproject.toml  spec_protectai_baseline.md
parapet-runner/configs/: iteration_v1.yaml  iteration_v1_calibrated.yaml  p3_action_tools.yaml  phase1_learning_curve.yaml
parapet-runner/notebooks/: latency_bench_kaggle.py
parapet-runner/parapet_runner/: __init__.py  baseline.py  config.py  l2_corpus.py  latency.py  latency_bench.py  latency_corpus.py  latency_onnx.py  latency_runtime.py  manifest.py  protectai.py  runner.py  truncation.py
parapet-runner/parapet_runner/residuals/: __init__.py  features.py  geometry.py  io.py  profile.py
parapet-runner/scripts/: adjusted_metrics.py  audit_legacy_eval_leakage.py  audit_prompt.md  build_l2_latency_corpus.py  extract_residual_supplement.py  intersect_residuals.py  l1_hparam_sweep.py  learning_curve.py  p3_gen_action_allowlist.py  p3_normalize_carriers.py  phase1_residual_formal_analysis.py  phase1_truncation_policy_spike.py  phase1_v8_residual_export.py  plot_error_clusters.py  preaudit_persistent_intersection.py  reconcile_audit.py  run.ps1  run.sh  sample_audit_batches.py  slice_value.py  threshold_sweep.py  v2_mix_ablation.py
parapet-runner/tests/: test_audit_legacy_eval_leakage.py  test_baseline.py  test_config.py  test_extract_residual_supplement.py  test_intersect_residuals.py  test_l2_corpus.py  test_latency.py  test_latency_bench.py  test_latency_corpus.py  test_latency_onnx.py  test_latency_runtime.py  test_manifest.py  test_phase1_residual_formal_analysis.py  test_phase1_truncation_policy_spike.py  test_phase1_v8_residual_export.py  test_preaudit_persistent_intersection.py  test_protectai.py  test_residuals_features.py  test_residuals_geometry.py  test_residuals_io.py  test_residuals_profile.py  test_runner.py  test_truncation.py  test_wiring.py
parapet/benches/: phase1_latency.rs
parapet/src/: lib.rs  main.rs  message.rs  model_fetch.rs  model_path.rs  proxy.rs  session.rs  trust.rs
parapet/src/config/: defaults.rs  error.rs  interpolation.rs  loader.rs  mod.rs  pattern.rs  raw.rs  source.rs  types.rs
parapet/src/constraint/: mod.rs
parapet/src/defang/: mention.rs  mod.rs
parapet/src/engine/: mod.rs  tests.rs
parapet/src/eval/: mod.rs
parapet/src/layers/: l1.rs  l1_harness.rs  l1_weights.rs  l1_weights_adversarial_suffix.rs  l1_weights_constraint_bypass.rs  l1_weights_exfiltration.rs  l1_weights_generalist_clean_1to1_51042.rs  l1_weights_indirect_injection.rs  l1_weights_instruction_override.rs  l1_weights_meta_probe.rs  l1_weights_obfuscation.rs  l1_weights_roleplay_jailbreak.rs  l2_semantic.rs  l2_weights.rs  l2a.rs  l2a_model.rs  l3_inbound.rs  l4.rs  l5a.rs  mod.rs
parapet/src/normalize/: mod.rs
parapet/src/provider/: mod.rs
parapet/src/routing/: mod.rs
parapet/src/sensor/: hash_conflict.rs  l3_mention_delta.rs  malformed.rs  mod.rs  structural.rs  (+2 more)
parapet/tests/: integration.rs  l2_parity.rs
(+273 files in other folders)
