[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parapet"
version = "0.1.0"
description = "Python SDK for Parapet LLM proxy firewall"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "respx>=0.22",
]
