[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parapet-runner"
version = "0.1.0"
description = "Experiment orchestration for Parapet L1 classifier research"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider -p no:tmpdir"
testpaths = ["tests"]
