[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parapet-runner"
version = "0.1.0"
description = "Experiment orchestration for Parapet L1 classifier research"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
bench = [
  # Real ONNX runtime + HuggingFace tokenizer adapters for the L2 latency
  # bench (see parapet_runner/latency_onnx.py). Install with:
  #   pip install -e ".[bench]"
  #
  # onnxruntime-gpu is intentionally NOT pinned here. On Kaggle/Colab GPU
  # runtimes, install `onnxruntime-gpu` in the notebook header instead of
  # `onnxruntime`. Locally and in CI, `onnxruntime` (CPU) is sufficient.
  "onnxruntime>=1.17",
  "transformers>=4.40",
  "sentencepiece>=0.2",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider -p no:tmpdir"
testpaths = ["tests"]
