[package]
name = "parapet"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LLM proxy firewall — protective wall at the edge of a fortification"

[[bin]]
name = "parapet-engine"
path = "src/main.rs"

[[bin]]
name = "parapet-eval"
path = "src/bin/parapet_eval.rs"
required-features = ["eval"]

[[bin]]
name = "parapet-fetch"
path = "src/bin/parapet_fetch.rs"

[[bin]]
name = "pg2-diag"
path = "src/bin/pg2_diag.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aho-corasick = "1"
regex = "1"
unicode-normalization = "0.1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
async-trait = "0.1"
thiserror = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
jsonschema = "0.28"
url = "2"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "deflate"] }
flate2 = "1"
base64 = "0.22"
phf = { version = "0.11", features = ["macros"] }
dirs = "5"

# Optional L2a dependencies (Prompt Guard 2 ONNX model)
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.17", optional = true }

[features]
eval = []
l2a = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "phase1_latency"
harness = false
